# PyPNM

./: .gitignore  .gitleaks.toml  CNAME  CODING_AGENTS.md  Dockerfile  MANIFEST.in  Makefile  NOTICE  README.md  SECURITY.md  docker-compose.yml  install.sh  mkdocs.yml  mnd-gt0002-ccap001-new.txt  mnd-gt0002-ccap002-new.txt  mnd-gt0002-ccap101-new.txt  mnd-gt0002-ccap201-new.txt  mnd-gt0002-ccapv001-new.txt  pyproject.toml  test_cmts_utsc_oids.sh  test_constellation_trigger.py  test_utsc.py  test_utsc_cfgindex.py  test_utsc_e2e.py  walk-mnd-gt0002-ccap001.txt  walk-mnd-gt0002-ccap002.txt  walk-mnd-gt0002-ccap101.txt  walk-mnd-gt0002-ccap201.txt  walk-mnd-gt0002-ccapv001.txt  walk.txt
.github/workflows/: codeql.yml  daily-build.yml  docs.yml  kubernetes-kind.yml  macos-ci-test-only.yml  macos-ci.yml  post-build.yml  publish-ghcr.yml  publish-mkdocs.yml  publish-pypi.yml  pypi-install-check.yml  release-assets.yml
demo/: README.md
demo/settings/: system.json
deploy/docker/: README.md  install.sh
deploy/kubernetes/: README.md
docker/: entrypoint.sh  ping.Dockerfile
docs/: index.md  style-guide.md
docs/api/: index.md
docs/docker/: commands.md  install-docker.md  install.md
docs/examples/: cli-fastapi-curl.md  cli-pnm-fastapi.md  cli-pnm-parser-py.md  cli-snmp-fastapi.md  index.md
docs/gallery/: index.md
docs/install/: development.md
docs/issues/: index.md  reporting-issues.md  support-bundle.md
docs/js/: mathjax-config.js
docs/kubernetes/: commands.md  kind-freelens.md  kind-install.md  multi-cluster-kind.md  pros-cons.md  pypnm-deploy.md  quickstart.md  scale-replicas-kind.md  ten-instances-kind.md
docs/misc/: acronyms.md
docs/release/: release-strategy.md
docs/scripts/: index.md
docs/system/: generate-ssl-certificates.md  index.md  menu.md  pypnm-cli.md  system-config.md
docs/tests/: index.md  pycycle.md  pypnm-software-qa.md  pytest.md  ruff.md
docs/tools/: aliases.md  index.md  local-container-build.md  local-kubernetes-smoke.md  pnm-file-macaddress-updater.md  pypnm-clean.md  pypnm-mib-compiler.md  system-config-apply.md  version-check.md
docs/topology/: index.md  local.md  scp-sftp.md
scripts/: base_utsc_rxmer_settings.md  init_secrets_key.sh  install-pypnm-docker-container.sh  install_aliases.sh  install_py_path.sh  provision_rxmer.py  provision_utsc.py  provision_utsc_evo.py  setup-and-test.sh  start-fastapi-service.sh  test_pnm_capabilities.py  test_utsc_cisco.py  update-dep.sh  update_env.sh
src/pypnm/: __init__.py  cli.py  version.py
tests/: test_analysis_spectrum_snmp_extension.py  test_archive_manager.py  test_atdma_preeq_key_metrics.py  test_cable_modem_snmpv2_integration.py  test_capture_group_concurrency.py  test_chan_estimation_report_dbfit_paths.py  test_channel_power.py  test_cm_spectrum_analysis_parser.py  test_cm_spectrum_analysis_snmp_parser.py  test_cm_us_ofdma_preeq_parser.py  test_common_process_service.py  test_complex_array_ops.py  test_complex_collector.py  test_config_manager.py  test_config_pnm_file_retrieval_normalization.py  test_csv_manager.py  test_db_linear_converter.py  test_dictutils_models_to_nested_dict.py  test_docker_assets.py  test_docs_equalizer_group_delay.py  test_docs_pnm_chan_est_entry_casts.py  test_docs_pnm_cm_ctl_test.py  test_docs_pnm_rxmer_entry_casts.py  test_docs_pnm_us_preeq_entry_casts.py  test_echo_detector.py  test_encrypt_system_config_secrets.py  test_file_processor.py  test_file_processor_hexdump.py  test_fixed_point_decoder.py  test_format.py  test_ftp_connector.py  test_group_delay.py  test_group_delay_calculator.py  test_heatmap_anomaly_detector.py  test_histogram_single_capture_schema.py  test_host_endpoint.py  test_ifft_echo_detector.py  test_inet_utils.py  test_json_file_lock.py  test_json_transaction_db.py  (+46 more)
tools/: banner.txt  parse_usrxmer.py  plot_usrxmer.py
tools/agent-review/: 2026-01-22-coding-agents-spdx.review.md  2026-01-22-conflict-cleanup.review.md  2026-01-22-mac-scan-ignores.review.md  2026-01-22-pnm-processing-cm-us-ofdma-preeq.review.md  2026-01-22-pnm-us-ofdma-pre-eq-docs.review.md  2026-01-22-rbw-conversion.review.md  2026-01-22-rbw-frequency-span.review.md  2026-01-22-rbw-segment-span.review.md  2026-01-22-rbw-to-floor-tests.review.md  2026-01-22-rbw-to-floor.review.md  2026-01-22-rbw-types.review.md  2026-01-22-ruff-fixes.review.md  2026-01-22-snmp-capture-extension.review.md  2026-01-22-spectrum-analyzer-docs.review.md  2026-01-22-us-preeq-missing-fields.review.md  2026-01-23-spectrum-analyzer-rbw.review.md  2026-01-24-add-required-python-headers-dry-run.review.md  2026-01-24-atdma-preeq-fr-docs.review.md  2026-01-24-atdma-preeq-key-metrics-model.review.md  2026-01-24-atdma-preeq-key-metrics.review.md  2026-01-24-atdma-preeq-metrics-docs.review.md  2026-01-24-atdma-preeq-pptsr.review.md  2026-01-24-capture-group-locking.review.md  2026-01-24-channel-ids-docs.review.md  2026-01-24-docs-equalizer-metrics.review.md  2026-01-24-eq-frequency-response-normalized.review.md  2026-01-24-eq-frequency-response.review.md  2026-01-24-histogram-request-schema.review.md  2026-01-24-multi-chan-est-channel-ids.review.md  2026-01-24-multi-rxmer-channel-ids-docs.review.md  2026-01-24-multi-rxmer-channel-ids.review.md  2026-01-24-ruff-imports.review.md  2026-01-24-spectrum-analyzer-channel-ids-docs.review.md  2026-01-24-spectrum-analyzer-docs-channel-note.review.md  2026-01-24-spectrum-analyzer-request-plan.md  2026-01-24-spectrum-analyzer-request-plan.review.md  2026-01-24-spectrum-analyzer-request-schema.review.md  2026-01-24-spectrum-analyzer-router-fix.review.md  2026-01-24-us-eq-octetstring-bytes.review.md  2026-01-25-atdma-group-delay-types.review.md  (+7 more)
tools/docker/: install-docker-ubuntu.sh
tools/k8s/: pypnm_k8s_remote_deploy.sh  pypnm_k8s_toolkit.sh  pypnm_kind_vm_bootstrap.sh
tools/local/: local_container_build.sh  local_kubernetes_smoke.sh
tools/maintenance/: add-required-python-headers.py  clean.sh  database-management.sh  factory-reset.py
tools/pnm/: pnm-demo-sanitizer.py  pnm-mac-updater.py  pnm_file_retrieval_setup.py  setup_scp_key.py
(+502 files in other folders)
